# Emerald

./: .gitignore  .solitarc.js  Anchor.toml  README.md  package-lock.json  package.json  tsconfig.build.json  tsconfig.json
.crates/: .crates2.json
app/: index.ts  package.json  tsconfig.json
app/classes/: Emerald.ts  index.ts
app/constants/: index.ts
app/lib/emerald-solita/accounts/: Collection.ts  CommunityPool.ts  MainPool.ts  NftTicket.ts  Taken.ts  UserAccount.ts  UserCommunityAccount.ts
app/lib/emerald-solita/errors/: index.ts
app/lib/emerald-solita/instructions/: addCollection.ts  addCollectionPolicy.ts  (+10 more)
programs/emerald/: Cargo.toml
programs/emerald/src/: lib.rs
programs/emerald/src/admin/: add_collection.rs  add_collection_policy.rs  initialise_community.rs  lock_community.rs  mod.rs  update_admin.rs  update_collection_policy.rs  withdraw_community.rs
programs/emerald/src/common/: constants.rs  mod.rs  utils.rs
programs/emerald/src/errors/: errors.rs
programs/emerald/src/states/: collection.rs  collection_policy.rs  community.rs  delegate.rs  main_pool.rs  mod.rs  nft_ticket.rs  snapshot_peg.rs  taken.rs  user_account.rs  user_community_account.rs
programs/emerald/src/superadmin/: initialise_main.rs  mod.rs  update_fees.rs  withdraw_main.rs
programs/emerald/src/user/: claim_delegate.rs  claim_single.rs  initialise_user_account.rs  initialise_user_community_account.rs  mod.rs  stake_nft.rs  stake_pnft.rs  unstake_nft.rs  unstake_pnft.rs  update_delegate.rs
scripts/: collection.ts  community.ts  init.ts  policy.ts  stake.ts  userCommunity.ts
tests/: consts.ts  derived_nfts.ts  helper.ts  main.ts  master-keypair.json  nested_nfts.ts  staking-pnft.ts  staking.ts  user.ts
