[package]
name = "emerald"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "emerald"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = {version = "0.27.0", features = ["init-if-needed"]}
anchor-spl = "0.27.0"
mpl-token-metadata = { version = "1.2.5", features = ["no-entrypoint"] }
metaplex-token-metadata = { version = "0.0.1", features = ["no-entrypoint"] }
solana-program = "^1.13.5"
switchboard-v2 = "0.1.23"
spl-math = {version = "0.1", features = ["no-entrypoint"]}
bytemuck = "1.13.1"