[package]
name = "emerald"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "emerald"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = {version = "0.27.0", features = ["init-if-needed"]}
anchor-spl = "0.27.0"
mpl-token-metadata = "5.1.0"
metaplex-token-metadata = { version = "0.0.1", features = ["no-entrypoint"] }
solana-program = "=1.14.16"
switchboard-v2 = "0.1.23"
spl-math = {version = "0.1", features = ["no-entrypoint"]}
bytemuck = "1.13.1"
proc-macro2 = "1.0.66"
ahash = "=0.8.7"
spl-token-2022 = "=0.5.0"
solana-zk-token-sdk = "=1.14.16"
solana-program-error = "=2.2.1"
solana-msg = "=2.2.1"
solana-decode-error = "=2.2.1"
thiserror = "=1.0.40"
spl-program-error = "=0.7.0"
spl-program-error-derive = "=0.5.0"
getrandom = { version = "0.2", features = ["custom"] }